--- a/index.html
+++ b/index.html
@@ -188,6 +188,8 @@
 			});
 
 		</script>
+		<script src="//use.typekit.net/mje7pfq.js"></script>
+		<script>try{Typekit.load();}catch(e){}</script>
 
 	</body>
 </html>
